fix z-index value for kara detail display

--- a/frontend/src/components/karas/Playlist.scss
+++ b/frontend/src/components/karas/Playlist.scss
@@ -26,5 +26,9 @@
 	overflow: hidden;
 	li {
 		display: block;
+		z-index: 1;
+		.detailsKara {
+			z-index: 10;
+		}
 	}
 }
